EXtended dispatcher framework